CORS added | all routes testes with decumentation UI
