# server.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const router = require("./routes");
-const bodyParser = require("body-parser")
+const cors = require("cors");
 
 const mongoDb = require("./database/connect");
 
@@ -10,11 +10,30 @@ const app = express();
 
 const PORT = process.env.PORT || 8080;
 
-// Body Parsing
-app.use(express.json());
+// Resource sharing
+const whitelist = [
+  `http://localhost:${PORT}`,
+  'http://localhost:3000',
+  'https://chirp-w3e9.onrender.com',
+];
 
-// Router
-app.use("/", router);
+const corsOptions = {
+  origin: function (origin, callback) {
+    if (!origin || whitelist.includes(origin)) {
+      callback(null, true);
+    } else {
+      console.log(`CORS blocked for origin: ${origin}`);
+      callback(new Error('Not allowed by CORS'));
+    }
+  }
+};
+
+
+
+app.use(cors(corsOptions))
+   .use(express.json())
+   .use("/", router);
+
 
 
 process.on('uncaughtException', (err, origin) => {
